# avremu

./: .gitignore  CITATION.cff  Cargo.toml  LICENCE  README.md  uart.txt
.github/workflows/: rust.yml
src/: boards.rs  cores.rs  devices.rs  events.rs  hardware.rs  main.rs  memory.rs  nets.rs  peripherals.rs
src/boards/: quty.rs
src/cores/: cores.rs
src/devices/: devices.rs
src/hardware/: buzzer.rs  display.rs  ic74hc595.rs  led.rs  pot.rs  pushbutton.rs  sinkpwm.rs  sinkuart.rs
src/memory/: memory.rs
src/peripherals/: adc.rs  clkctrl.rs  cpu.rs  cpuint.rs  peripherals.rs  port.rs  portmux.rs  spi.rs  stdio.rs  tca.rs  tcb.rs  usart.rs
